package main

import (
	"bufio"
	"flag"
	"fmt"
	"log"
	"os"
	"strings"

	"kvstore/client"
	"kvstore/proto"
)

func main() {
	// Command-line flags
	serverAddr := flag.String("server", "localhost:50051", "Server address")
	flag.Parse()

	printBanner()
	log.Printf("ğŸ“¡ Connecting to server: %s", *serverAddr)

	// Connect to server
	kvClient, err := client.NewKVClient(*serverAddr)
	if err != nil {
		log.Fatalf("âŒ Failed to connect: %v", err)
	}
	defer kvClient.Close()

	log.Println("âœ… Connected to server")
	log.Println()
	printHelp()

	scanner := bufio.NewScanner(os.Stdin)

	for {
		fmt.Print("> ")
		if !scanner.Scan() {
			break
		}

		line := strings.TrimSpace(scanner.Text())
		if line == "" {
			continue
		}

		parts := strings.Fields(line)
		if len(parts) == 0 {
			continue
		}

		cmd := strings.ToUpper(parts[0])

		switch cmd {
		case "PUT":
			if len(parts) < 3 {
				fmt.Println("Usage: PUT <key> <value>")
				continue
			}
			key := parts[1]
			value := strings.Join(parts[2:], " ")

			if err := kvClient.Put(key, []byte(value)); err != nil {
				fmt.Printf("âŒ Error: %v\n", err)
			} else {
				fmt.Println("âœ… OK")
			}

		case "GET":
			if len(parts) != 2 {
				fmt.Println("Usage: GET <key>")
				continue
			}
			key := parts[1]

			value, err := kvClient.Get(key)
			if err != nil {
				fmt.Printf("âŒ Error: %v\n", err)
			} else {
				fmt.Printf("ğŸ“¦ %s\n", value)
			}

		case "DELETE":
			if len(parts) != 2 {
				fmt.Println("Usage: DELETE <key>")
				continue
			}
			key := parts[1]

			if err := kvClient.Delete(key); err != nil {
				fmt.Printf("âŒ Error: %v\n", err)
			} else {
				fmt.Println("ğŸ—‘ï¸  Deleted")
			}

		case "STATS":
			stats, err := kvClient.Stats()
			if err != nil {
				fmt.Printf("âŒ Error: %v\n", err)
				continue
			}
			printStats(stats)

		case "COMPACT":
			fmt.Println("ğŸ”„ Triggering compaction...")
			if err := kvClient.Compact(); err != nil {
				fmt.Printf("âŒ Error: %v\n", err)
			} else {
				fmt.Println("âœ… Compaction completed")
			}

		case "HELP":
			printHelp()

		case "QUIT", "EXIT":
			fmt.Println("ğŸ‘‹ Disconnecting...")
			return

		default:
			fmt.Printf("â“ Unknown command: %s\n", cmd)
			fmt.Println("Type HELP for available commands")
		}
	}

	if err := scanner.Err(); err != nil {
		log.Fatalf("Error reading input: %v", err)
	}
}

func printBanner() {
	banner := `
â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—
â•‘                                                           â•‘
â•‘     ğŸ–¥ï¸  KVStore CLI Client                               â•‘
â•‘                                                           â•‘
â•‘     Week 4: Remote Access via gRPC âœ¨                    â•‘
â•‘                                                           â•‘
â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
`
	fmt.Println(banner)
}

func printHelp() {
	help := `
ğŸ“ Available Commands:
  PUT <key> <value>    Store a key-value pair
  GET <key>            Retrieve value by key
  DELETE <key>         Delete a key
  STATS                Show server statistics
  COMPACT              Trigger manual compaction
  HELP                 Show this help message
  QUIT / EXIT          Disconnect from server
`
	fmt.Println(help)
}

func printStats(stats *proto.StatsResponse) {
	fmt.Println()
	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘                    ğŸ“Š STATISTICS                          â•‘")
	fmt.Println("â• â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•£")

	// Storage Stats
	fmt.Println("â•‘  ğŸ’¾ Storage:                                              â•‘")
	fmt.Printf("â•‘     MemTable Size:        %-10d bytes              â•‘\n", stats.MemtableSize)
	fmt.Printf("â•‘     Number of SSTables:   %-10d                    â•‘\n", stats.NumSstables)
	fmt.Println("â•‘                                                           â•‘")

	// Bloom Filter Stats
	fmt.Println("â•‘  ğŸŒ¸ Bloom Filter:                                         â•‘")
	bloomTotal := stats.BloomFilterHits + stats.BloomFilterMisses
	var bloomHitRate float64
	if bloomTotal > 0 {
		bloomHitRate = float64(stats.BloomFilterHits) / float64(bloomTotal) * 100
	}
	fmt.Printf("â•‘     Hits (skipped reads): %-10d                    â•‘\n", stats.BloomFilterHits)
	fmt.Printf("â•‘     Misses (disk reads):  %-10d                    â•‘\n", stats.BloomFilterMisses)
	fmt.Printf("â•‘     Hit Rate:             %-10.1f%%                 â•‘\n", bloomHitRate)
	fmt.Println("â•‘                                                           â•‘")

	// Compaction Stats
	fmt.Println("â•‘  ğŸ”„ Compaction:                                           â•‘")
	if stats.CompactionTotalCompactions > 0 {
		fmt.Printf("â•‘     Total Compactions:    %-10d                    â•‘\n", stats.CompactionTotalCompactions)
		fmt.Printf("â•‘     Keys Removed:         %-10d                    â•‘\n", stats.CompactionTotalKeysRemoved)
		fmt.Printf("â•‘     Bytes Reclaimed:      %-10d bytes              â•‘\n", stats.CompactionTotalBytesReclaimed)
		if stats.CompactionLastCompaction != "" {
			fmt.Printf("â•‘     Last Compaction:      %-27sâ•‘\n", stats.CompactionLastCompaction)
		}
	} else {
		fmt.Println("â•‘     No compactions yet                                    â•‘")
	}

	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
	fmt.Println()
}
